<resources>
    <string name="app_name_hack">mOSkito</string>

    <string name="action_settings">Postavke</string>
    <string name="action_events">Događaji</string>
    <string name="action_tutorials">O zamkama</string>
    <string name="action_map">Karta</string>
    <string name="get_started">Uključi se</string>
    <string name="learn_more">Saznaj više</string>
    <string name="action_stats">Statistike</string>
    <string name="action_toc">Uvjeti korištenja</string>

    <string name="secer">Šećer</string>
    <string name="kvasac">Kvasac</string>
    <string name="voda">Voda</string>
    <string name="plasticna_boca">Plastična boca</string>
    <string name="skare">Škare</string>
    <string name="ingredients">Za pripremanje zamke, pripremite nekoliko stvari</string>
    <string name="trap_done">Vaša zamka je gotova. Fotografirajte postavljenu zamku za završetak.</string>
    <string name="congrats">Čestitamo!</string>
    <string name="trap_photo">Fotografiraj zamku</string>
    <string name="cancel">Odustani</string>
    <string name="trap_success">Zamka postavljena. Hvala!</string>
    <string name="trap_tutorial_dialog_title">Upute za izradu zamke</string>
    <string name="trap_tutorial_dialog_message">Trebaš li upute za izradu i postavljenje zamke?</string>
    <string name="trap_tutorial_dialog_positive">Pokaži</string>
    <string name="trap_tutorial_dialog_negative">Ne trebam</string>
    <string name="bite_registered">Ugriz registriran</string>
    <string name="report_broken_trap">Prijavi neispravnu zamku</string>
    <string name="report_fixed_trap">Prijavi popravljenu zamku</string>
</resources>
