<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:divider="@drawable/divider_transparent"
        android:orientation="vertical"
        android:paddingLeft="100dp"
        android:paddingTop="@dimen/padding_tutorial"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </LinearLayout>

        <TextView
            style="@style/TextTutorial"
            android:drawableLeft="@drawable/ic_secer"
            android:text="@string/secer" />

        <TextView
            style="@style/TextTutorial"
            android:drawableLeft="@drawable/ic_kvasac"
            android:text="@string/kvasac" />

        <TextView
            style="@style/TextTutorial"
            android:drawableLeft="@drawable/ic_voda"
            android:text="@string/voda" />

        <TextView
            style="@style/TextTutorial"
            android:drawableLeft="@drawable/ic_boca"
            android:text="@string/plasticna_boca" />

        <TextView
            style="@style/TextTutorial"
            android:drawableLeft="@drawable/ic_skare"
            android:text="@string/skare" />
    </LinearLayout>


    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:paddingBottom="@dimen/padding_large"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_onboarding_side"
        android:paddingRight="@dimen/padding_onboarding_side"
        android:textAppearance="@style/TextAppearanceOnboarding"
        android:text="@string/ingredients" />

</LinearLayout>