<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light"
    android:orientation="vertical"
    android:paddingTop="96dp">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/tutorial_5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_standard"
        android:paddingLeft="@dimen/padding_onboarding_side"
        android:paddingRight="@dimen/padding_onboarding_side"
        android:paddingTop="@dimen/padding_large"
        android:text="@string/congrats"
        android:textAppearance="@style/TextAppearanceOnboarding"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_onboarding_side"
        android:paddingRight="@dimen/padding_onboarding_side"
        android:layout_marginBottom="40dp"
        android:text="@string/trap_done"
        android:textAppearance="@style/TextAppearanceOnboarding" />

    <Button
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/padding_large"
        android:backgroundTint="@color/white"
        android:text="@string/trap_photo"
        android:textColor="@color/green_dark" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/green_dark"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:textSize="16sp" />
</LinearLayout>
